Main.py WIP - Enhancer Agent

--- a/src/agents/enhancer_agent.ipynb
+++ b/src/agents/enhancer_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "94714258",
    "metadata": {},
    "outputs": [],
@@ -141,67 +141,29 @@
     "enhancer_agent_prompt_template = PromptTemplate.from_template(\n",
     "    \"\"\"You are a Query Enhancer Agent.\n",
     "\n",
-    "Your task is to:\n",
-    "1. Understand the user's query and its intent.\n",
-    "2. Clarify any ambiguities or vague instructions.\n",
-    "3. Add contextual details such as location, industry, amount, category, or other metadata if implied.\n",
-    "4. Output an improved version of the query, optimized for semantic and structured search.\n",
-    "\n",
     "Rules:\n",
     "- Do not ask follow-up questions.\n",
     "- Infer likely meanings when user input is ambiguous.\n",
     "- Your output should be a standalone, precise query in natural language.\n",
     "- Do not include explanations or formatting like “Here’s the improved query.”\n",
     "\n",
-    "Example:\n",
-    "1. Fuzzy Funding Reference → Structured Numeric + Stage Filter\n",
-    "User Query: \"Startups with big funding\"\n",
-    "Enhanced Prompt: \"Indian startups that raised over $10 million in Series A or later funding rounds.\"\n",
-    "Focus: Adds monetary threshold and filters funding stage.\n",
-    "\n",
-    "2. Location Mention → Structured Geographic Filter\n",
-    "User Query: \"Top SaaS companies in Bangalore\"\n",
-    "Enhanced Prompt: \"Top-performing SaaS startups headquartered in Bengaluru with recent traction or funding activity.\"\n",
-    "Focus: Resolves city + domain, adds optional temporal or traction filter.\n",
-    "\n",
-    "🔹 3. Team Size Mention → Employee Count Filter\n",
-    "User Query: \"Companies with large teams working in AI\"\n",
-    "Enhanced Prompt: \"AI-focused startups in India with over 200 employees and active hiring status.\"\n",
-    "Focus: Converts “large team” into a numeric filter + hiring signal.\n",
-    "\n",
-    "🔹 4. Recent Growth Mention → Year + Funding Filter\n",
-    "User Query: \"Fast-growing e-commerce startups\"\n",
-    "Enhanced Prompt: \"E-commerce startups founded after 2018 with rapid growth and multiple funding rounds.\"\n",
-    "Focus: Infers growth using founding year and number of rounds.\n",
-    "\n",
-    "🔹 5. Tech Stack Mention → Tool + Sector Filters\n",
-    "User Query: \"Fintech companies using AWS and React\"\n",
-    "Enhanced Prompt: \"Fintech startups with a tech stack including AWS and React, offering scalable B2C solutions.\"\n",
-    "Focus: Extracts cloud/backend/frontend tech + sector.\n",
-    "\n",
-    "\n",
-    "\n",
     "You have access to the following tools:\n",
     "{tools}\n",
     "\n",
-    "Format:\n",
-    "Question: the input query\n",
-    "Thought: think step-by-step about what to extract\n",
-    "Action: the tool to use, from [{tool_names}]\n",
-    "Action Input: JSON string or plain text input to the tool\n",
-    "Observation: result returned by the tool\n",
-    "... (repeat Thought/Action/Observation as needed)\n",
-    "Thought: I have gathered all necessary structured data.\n",
-    "Final Answer: a dictionary of all extracted metadata and filters\n",
-    "\n",
-    "Constraints:\n",
-    "- NEVER ask the user again\n",
-    "- ONLY use tools\n",
-    "- NEVER hallucinate missing data\n",
+    "Question: {input}  \n",
+    "Thought: <think about which tool to call first>  \n",
+    "Action: <tool name, from [{tool_names}]>  \n",
+    "Action Input: <JSON or text input for that tool>  \n",
+    "Observation: <its output>  \n",
+    "… (repeat Thought/Action/Observation as needed) …  \n",
+    "Thought: I have all the pieces.  \n",
+    "Final Answer: {{\"enhanced_query\": \"<refined NL query>\",\n",
+    "                \"filters\": <dict of all filters>,\n",
+    "                \"k\": <integer>}}\n",
     "\n",
     "Begin!\n",
     "\n",
-    "Question: {input}\n",
+    "Question: {input}  \n",
     "{agent_scratchpad}\"\"\"\n",
     ")\n",
     "\n",
@@ -212,7 +174,7 @@
     ")\n",
     "\n",
     "# 🔧 Define the React-style agent\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\")  # Or use your preferred model\n",
+    "llm = ChatOpenAI(model=\"gpt-4o\",temperature=0)  # Or use your preferred model\n",
     "\n",
     "\n",
     "# Create the agent\n",
@@ -225,10 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "96e729ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mThought: I should first extract relevant keywords related to the company fields.  \n",
+      "Action: keyword_extractor  \n",
+      "Action Input: \"Find 5 B2B SaaS startups in India\"  \u001b[0m\u001b[36;1m\u001b[1;3m{'industry_sector': ['saas', 'b2b']}\u001b[0m\u001b[32;1m\u001b[1;3mI should extract any numeric constraints from the query.  \n",
+      "Action: extract_numeric_constraints  \n",
+      "Action Input: \"Find 5 B2B SaaS startups in India\"  \u001b[0m\u001b[33;1m\u001b[1;3m{}\u001b[0m\u001b[32;1m\u001b[1;3mI should now compose the filters using the extracted information.  \n",
+      "Action: filter_composer  \n",
+      "Action Input: {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}  \u001b[0m\u001b[38;5;200m\u001b[1;3m{}\u001b[0m\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mFind five B2B SaaS startups located in India.\u001b[0mInvalid Format: Missing 'Action:' after 'Thought:'\u001b[32;1m\u001b[1;3mI have all the pieces.  \n",
+      "Final Answer: {\"enhanced_query\": \"Find five B2B SaaS startups located in India.\", \"filters\": {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}, \"k\": 5}\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{\"enhanced_query\": \"Find five B2B SaaS startups located in India.\", \"filters\": {\"industry_sector\": [\"saas\", \"b2b\"], \"location\": \"India\"}, \"k\": 5}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.agents import AgentExecutor\n",
     "\n",
@@ -236,9 +219,7 @@
     "\n",
     "query = \"\"\"\n",
     "\n",
-    "List D2C or SaaS companies in Delhi or Hyderabad that raised over ₹200 crore, are currently hiring for engineers and PMs, valued above $500 million, \n",
-    "\n",
-    "offer mobile apps or APIs, and are backed by Sequoia or Accel.\"\"\"\n",
+    "Find 5 B2B SaaS startups in India\"\"\"\n",
     "\n",
     "result = executor.invoke({\"input\": query})\n",
     "print(result[\"output\"])"
@@ -246,67 +227,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cc62f49e",
+   "execution_count": null,
+   "id": "19cd1f70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n"
+     ]
+    }
+   ],
    "source": [
-    "from typing import Literal, List, Dict\n",
+    "from typing import Any, Dict, List, Literal\n",
     "from langchain_core.agents import AgentAction, AgentFinish\n",
     "from langchain_core.messages import HumanMessage\n",
+    "from langgraph.types import Command\n",
     "from schema.agent_state import AgentState\n",
+    "from agents.enhancer_agent import enhancer_agent\n",
+    "\n",
+    "def normalize_messages(raw_msgs: List[Any]) -> List[Dict[str, str]]:\n",
+    "    \"\"\"\n",
+    "    Turn any HumanMessage objects into plain dicts {\"role\",\"content\"},\n",
+    "    and pass through existing dicts as-is.\n",
+    "    \"\"\"\n",
+    "    normalized = []\n",
+    "    for m in raw_msgs:\n",
+    "        if isinstance(m, HumanMessage):\n",
+    "            normalized.append({\n",
+    "                \"role\": m.name,       # who spoke\n",
+    "                \"content\": m.content  # what they said\n",
+    "            })\n",
+    "        else:\n",
+    "            normalized.append(m)     # assume it's already a dict\n",
+    "    return normalized\n",
+    "\n",
     "\n",
     "def enhancer_node(state: AgentState) -> Command[Literal[\"supervisor\"]]:\n",
-    "    \"\"\"\n",
-    "    React‑style Enhancer Agent Node.\n",
+    "    # 1) Normalize history\n",
+    "    msgs = normalize_messages(state.get(\"messages\", []))\n",
     "\n",
-    "    1. Streams through the pre‑configured enhancer_agent (with your tool prompt).\n",
-    "    2. Captures internal actions and observations.\n",
-    "    3. Parses its final Python dict output: enhanced_query, filters, k.\n",
-    "    4. Updates the shared AgentState with full trace logs.\n",
-    "    5. Routes control back to 'supervisor'.\n",
-    "    \"\"\"\n",
+    "    # 2) Extract user input\n",
+    "    user_input = \"\"\n",
+    "    for m in reversed(msgs):\n",
+    "        if m.get(\"role\") == \"user\":\n",
+    "            user_input = m[\"content\"]\n",
+    "            break\n",
+    "    print(f\"\\n[DEBUG] Enhancer Node received user_input: {user_input}\")\n",
     "\n",
-    "    # ─── Disable the agent’s built‑in verbose logging ───────────────────────\n",
-    "    enhancer_agent.verbose = False\n",
-    "\n",
-    "    # ─── Prepare collectors for this invocation ────────────────────────────\n",
+    "    # 3) Stream the agent\n",
     "    actions: List[str] = []\n",
     "    observations: List[str] = []\n",
-    "    final_output = None\n",
+    "    final_output: Any = None\n",
     "\n",
-    "    # ─── Stream the React‑style loop ──────────────────────────────────────\n",
-    "    # We pass in only the conversation history; the agent already knows its system prompt & tools.\n",
-    "    for step in enhancer_agent.stream({\"messages\": state.get(\"messages\", [])}):\n",
+    "    payload = {\"input\": user_input, \"intermediate_steps\": []}\n",
+    "    print(f\"[DEBUG] Enhancer payload: {payload}\")\n",
+    "\n",
+    "    for step in enhancer_agent.stream(payload):\n",
     "        if isinstance(step, AgentAction):\n",
-    "            # Tool choice or internal thought\n",
+    "            print(f\"[DEBUG] AgentAction: {step.log}\")\n",
     "            actions.append(str(step.log))\n",
     "        elif isinstance(step, AgentFinish):\n",
-    "            # Final result from the agent: expected to be a Python dict\n",
+    "            print(f\"[DEBUG] AgentFinish output: {step.return_values.get('output')}\")\n",
     "            final_output = step.return_values.get(\"output\")\n",
     "        else:\n",
-    "            # Intermediate tool output\n",
+    "            print(f\"[DEBUG] Observation: {step}\")\n",
     "            observations.append(str(step))\n",
     "\n",
-    "    # ─── Parse the agent’s final output dict (or fallback) ─────────────────\n",
+    "    # 4) Parse final_output\n",
+    "    print(f\"[DEBUG] raw final_output: {final_output}\")\n",
     "    if isinstance(final_output, dict):\n",
     "        enhanced_query = final_output.get(\"enhanced_query\", \"\")\n",
-    "        filters = final_output.get(\"filters\", {})\n",
-    "        k = final_output.get(\"k\", None)\n",
-    "        message_content = str(final_output)\n",
+    "        filters        = final_output.get(\"filters\", {})\n",
+    "        k              = final_output.get(\"k\", None)\n",
+    "        msg_text       = str(final_output)\n",
     "    else:\n",
-    "        # Fallback if agent returned something unexpected\n",
     "        enhanced_query = \"\"\n",
-    "        filters = {}\n",
-    "        k = None\n",
-    "        message_content = str(final_output) if final_output is not None else \"\"\n",
+    "        filters        = {}\n",
+    "        k              = None\n",
+    "        msg_text       = str(final_output) if final_output is not None else \"\"\n",
     "\n",
-    "    # ─── Append a completion marker and summary to the logs ────────────────\n",
-    "    new_actions = (\n",
-    "        state.get(\"actions\", [])\n",
-    "        + actions\n",
-    "        + [\"Enhancer agent completed\"]\n",
-    "    )\n",
+    "    # 5) Log summary\n",
+    "    new_actions      = state.get(\"actions\", []) + actions + [\"Enhancer completed\"]\n",
     "    new_observations = (\n",
     "        state.get(\"observations\", [])\n",
     "        + observations\n",
@@ -316,19 +319,22 @@
     "            f\"k: {k}\",\n",
     "        ]\n",
     "    )\n",
+    "    print(f\"[DEBUG] Parsed enhanced_query: {enhanced_query}\")\n",
+    "    print(f\"[DEBUG] Parsed filters: {filters}\")\n",
+    "    print(f\"[DEBUG] Parsed k: {k}\")\n",
     "\n",
-    "    # ─── Return the updated state and route back to the supervisor ─────────\n",
+    "    # 6) Append message and return\n",
+    "    msgs.append({\"role\": \"enhancer\", \"content\": msg_text})\n",
+    "\n",
     "    return Command(\n",
     "        update={\n",
-    "            \"messages\": [\n",
-    "                HumanMessage(content=message_content, name=\"enhancer\")\n",
-    "            ],\n",
+    "            \"messages\":       msgs,\n",
     "            \"enhanced_query\": enhanced_query,\n",
-    "            \"filters\": filters,\n",
-    "            \"k\": k,\n",
-    "            \"actions\": new_actions,\n",
-    "            \"observations\": new_observations,\n",
-    "            \"agent_name\": \"enhancer\",\n",
+    "            \"filters\":        filters,\n",
+    "            \"k\":              k,\n",
+    "            \"actions\":        new_actions,\n",
+    "            \"observations\":   new_observations,\n",
+    "            \"agent_name\":     \"enhancer\",\n",
     "        },\n",
     "        goto=\"supervisor\"\n",
     "    )\n"
