--- a/src/graph/workflow.ipynb
+++ b/src/graph/workflow.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "965b288c",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
     "    builder.add_edge(START, \"supervisor\")\n",
     "    builder.add_edge(\"supervisor\", \"enhancer\")\n",
     "    builder.add_edge(\"enhancer\", \"supervisor\")\n",
-    "    builder.add_edge(\"supervisor\", \"qdrant_search\")\n",
+    "    #builder.add_edge(\"supervisor\", \"qdrant_search\")\n",
     "\n",
     "    # Mark the end node\n",
     "    builder.set_finish_point(\"qdrant_search\")\n",
