Main.py WIP - Enhancer Agent

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f96b11f8",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "503399c5",
    "metadata": {},
    "outputs": [],
@@ -56,21 +56,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a191ec4e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tools.graph_query'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ SRC path added: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "🔁 SRC path already in sys.path: /home/prashant-agrawal/projects/netflix_talk2data/src\n",
+      "📌 Collection Name: indian_startups\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: what to do next\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: what to do next\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n",
+      "\n",
+      "[DEBUG] Enhancer Node received user_input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] Enhancer payload: {'input': 'Find 5 B2B SaaS startups in India ', 'intermediate_steps': []}\n",
+      "[DEBUG] AgentAction: Thought: I need to extract relevant keywords from the query.\n",
+      "Action: keyword_extractor\n",
+      "Action Input: Find 5 B2B SaaS startups in India \n",
+      "[DEBUG] raw final_output: None\n",
+      "[DEBUG] Parsed enhanced_query: \n",
+      "[DEBUG] Parsed filters: {}\n",
+      "[DEBUG] Parsed k: None\n"
+     ]
+    },
+    {
+     "ename": "GraphRecursionError",
+     "evalue": "Recursion limit of 25 reached without hitting a stop condition. You can increase the limit by setting the `recursion_limit` config key.\nFor troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/GRAPH_RECURSION_LIMIT",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# src/main.py\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mworkflow\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m build_graph\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrun_once\u001b[39m(user_query: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m      6\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m    Build the graph, run it end‑to‑end, and return the final AgentState.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
-      "File \u001b[0;32m~/projects/netflix_talk2data/src/graph/workflow.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StateGraph\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01magents\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m rag_agent, graph_agent, evaluator_agent, enhancer_agent, supervisor\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TypedDict\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mschema\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01magent_state\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AgentState\n",
-      "File \u001b[0;32m~/projects/netflix_talk2data/src/agents/graph_agent.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprebuilt\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_react_agent\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mconfig\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msetup\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_llm\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph_query\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m graph_query_tool\n\u001b[1;32m      9\u001b[0m llm \u001b[38;5;241m=\u001b[39m get_llm()\n\u001b[1;32m     11\u001b[0m graph_agent \u001b[38;5;241m=\u001b[39m create_react_agent(\n\u001b[1;32m     12\u001b[0m     llm,\n\u001b[1;32m     13\u001b[0m     tools\u001b[38;5;241m=\u001b[39m[graph_query_tool],\n\u001b[1;32m     14\u001b[0m     prompt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are a Graph Search agent. Use graph_query_tool to retrieve structured data.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m )\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tools.graph_query'"
+      "\u001b[0;31mGraphRecursionError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     25\u001b[0m     query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFind 5 B2B SaaS startups in India \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 26\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mrun_once\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=== Final State ===\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnhanced Query   : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menhanced_query\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[1], line 19\u001b[0m, in \u001b[0;36mrun_once\u001b[0;34m(user_query)\u001b[0m\n\u001b[1;32m     14\u001b[0m initial_state \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessages\u001b[39m\u001b[38;5;124m\"\u001b[39m: [ {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: user_query} ]\n\u001b[1;32m     16\u001b[0m }\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# 3) Invoke the graph synchronously (follows supervisor→enhancer→search→END)\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m final_state \u001b[38;5;241m=\u001b[39m \u001b[43mgraph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minvoke\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_state\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# 4) Inspect or return the final state\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m final_state\n",
+      "File \u001b[0;32m~/projects/netflix_talk2data/venv/lib/python3.10/site-packages/langgraph/pregel/__init__.py:2719\u001b[0m, in \u001b[0;36mPregel.invoke\u001b[0;34m(self, input, config, stream_mode, output_keys, interrupt_before, interrupt_after, checkpoint_during, debug, **kwargs)\u001b[0m\n\u001b[1;32m   2716\u001b[0m chunks: \u001b[38;5;28mlist\u001b[39m[Union[\u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, Any], Any]] \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m   2717\u001b[0m interrupts: \u001b[38;5;28mlist\u001b[39m[Interrupt] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m-> 2719\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstream(\n\u001b[1;32m   2720\u001b[0m     \u001b[38;5;28minput\u001b[39m,\n\u001b[1;32m   2721\u001b[0m     config,\n\u001b[1;32m   2722\u001b[0m     stream_mode\u001b[38;5;241m=\u001b[39mstream_mode,\n\u001b[1;32m   2723\u001b[0m     output_keys\u001b[38;5;241m=\u001b[39moutput_keys,\n\u001b[1;32m   2724\u001b[0m     interrupt_before\u001b[38;5;241m=\u001b[39minterrupt_before,\n\u001b[1;32m   2725\u001b[0m     interrupt_after\u001b[38;5;241m=\u001b[39minterrupt_after,\n\u001b[1;32m   2726\u001b[0m     checkpoint_during\u001b[38;5;241m=\u001b[39mcheckpoint_during,\n\u001b[1;32m   2727\u001b[0m     debug\u001b[38;5;241m=\u001b[39mdebug,\n\u001b[1;32m   2728\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[1;32m   2729\u001b[0m ):\n\u001b[1;32m   2730\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m stream_mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalues\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m   2731\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   2732\u001b[0m             \u001b[38;5;28misinstance\u001b[39m(chunk, \u001b[38;5;28mdict\u001b[39m)\n\u001b[1;32m   2733\u001b[0m             \u001b[38;5;129;01mand\u001b[39;00m (ints \u001b[38;5;241m:=\u001b[39m chunk\u001b[38;5;241m.\u001b[39mget(INTERRUPT)) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   2734\u001b[0m         ):\n",
+      "File \u001b[0;32m~/projects/netflix_talk2data/venv/lib/python3.10/site-packages/langgraph/pregel/__init__.py:2456\u001b[0m, in \u001b[0;36mPregel.stream\u001b[0;34m(self, input, config, stream_mode, output_keys, interrupt_before, interrupt_after, checkpoint_during, debug, subgraphs)\u001b[0m\n\u001b[1;32m   2447\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m loop\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mout_of_steps\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m   2448\u001b[0m     msg \u001b[38;5;241m=\u001b[39m create_error_message(\n\u001b[1;32m   2449\u001b[0m         message\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m   2450\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecursion limit of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrecursion_limit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m reached \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2454\u001b[0m         error_code\u001b[38;5;241m=\u001b[39mErrorCode\u001b[38;5;241m.\u001b[39mGRAPH_RECURSION_LIMIT,\n\u001b[1;32m   2455\u001b[0m     )\n\u001b[0;32m-> 2456\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m GraphRecursionError(msg)\n\u001b[1;32m   2457\u001b[0m \u001b[38;5;66;03m# set final channel values as run output\u001b[39;00m\n\u001b[1;32m   2458\u001b[0m run_manager\u001b[38;5;241m.\u001b[39mon_chain_end(loop\u001b[38;5;241m.\u001b[39moutput)\n",
+      "\u001b[0;31mGraphRecursionError\u001b[0m: Recursion limit of 25 reached without hitting a stop condition. You can increase the limit by setting the `recursion_limit` config key.\nFor troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/GRAPH_RECURSION_LIMIT"
      ]
     }
    ],
@@ -99,7 +233,7 @@
     "    return final_state\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    query = \"Find B2B SaaS startups in India with > $10M funding\"\n",
+    "    query = \"Find 5 B2B SaaS startups in India \"\n",
     "    result = run_once(query)\n",
     "\n",
     "    print(\"=== Final State ===\")\n",
